--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: J D
+bio: ..987654321..
 
 # twitter summary info
-description: A blog about technology and stuff related
+description:/./. A blog /./.
 
 # if it's an external image, update below for true
 # better with square images
@@ -53,11 +53,11 @@ email: myemail@gmail.com
 
 authors:
     johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
+        name: J D
+        bio: ..987654321..
         external-image: false
         picture: assets/images/profile.jpg
-        twitter: johndoe
+        twitter: jaggaadarling
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
