--- a/_config.yml
+++ b/_config.yml
@@ -35,21 +35,21 @@ highlighter: rouge
 disqus: mydisqus
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+facebook: jaggaadarling
+twitter: jaggaadarling
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: jaggaadarling
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+medium: jaggaadarling
 # vimeo: myvimeo
-email: myemail@gmail.com
+email: jaggaadarling@gmail.com
 
 authors:
     johndoe:
