--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: J D
-bio: ..987654321..
+bio: ..i hate u..
 
 # twitter summary info
 description: /./. A blog /./.
@@ -8,7 +8,7 @@ description: /./. A blog /./.
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: assets/images/thumb_14400082930User.png
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -56,7 +56,7 @@ authors:
         name: J D
         bio: ..987654321..
         external-image: false
-        picture: assets/images/profile.jpg
+        picture: assets/images/thumb_14400082930User.png
         twitter: jaggaadarling
 
 # do you want a larger site? change the option below
